src/regression/parse_pool/progtest4.sfp.out

sfc in program: parse_pool/progtest4.sfp
syntax error at 3 at line:
start hello
^
