src/regression/parse_pool/progtest4.sfp
# Testing erroneous program definition (missing closing brace)
configuration hello { blink nothing 
start hello

